# memo-stack

./: .dockerignore  .env.example  .env.selfhost.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.selfhost.yml  docker-compose.yml  pyproject.toml
.github/workflows/: infinity-context-ci.yml  memo-stack-ci.yml  memory-platform-ci.yml
docker/: infinity-context-entrypoint.sh
docs/: README.md  auto-memory-capture-platform-plan.md  central-team-memory-server-plan.md  content-extraction-clean-architecture-plan.md  content-extraction-parser-library-research.md  infinity-context-architecture-plan.md  infinity-context-core-lite-plan.md  local-install-and-memory-digest-plan.md  mcp-adapter.md  mcp-memory-foundation-plan.md  memo-stack-architecture-plan.md  memo-stack-core-lite-plan.md  memory-architecture-research-lockfile.md  memory-comparison-benchmark.md  memory-goal-completion-audit.md  memory-goal-coverage-matrix.md  memory-platform-architecture-plan.md  memory-platform-core-lite-plan.md  memory-platform-critical-rules.md  multimodal-quick-capture-memory-research.md  obsidian-connector-implementation-plan.md  self-hosted-team-deployment.md
docs/adr/: ADR-0001-infinity-context-core-lite-boundaries.md  ADR-0001-memory-core-lite-boundaries.md  ADR-0002-postgres-canonical-truth.md  ADR-0003-canonical-fact-lifecycle.md  ADR-0004-derived-retrieval-adapters.md  ADR-0005-capability-ports-cognee-graphiti.md  ADR-0006-multimodal-ingestion-provider-policy.md
docs/client-integration/: current-integration-run-notes.md  interview-infinity-context-clean-architecture-plan.md  interview-memory-clean-architecture-plan.md
docs/competitive/: code-context-tools-benchmark.md  memora-agent-memory-comparison.md
docs/hackinterview/: current-integration-run-notes.md  interview-memory-clean-architecture-plan.md
examples/: hackinterview_memory_smoke.py  integration_memory_smoke.py  mcp_agent_smoke.py
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart.skip
frontend/tool/: marionette_anchor_lifecycle_e2e.dart  marionette_e2e_runtime.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
plugins/infinity-context-agent-plugin/: .mcp.json  README.md  gemini-extension.json  opencode.json
plugins/infinity-context-agent-plugin-cursor-workspace/: GENERATED.md  README.md
plugins/infinity-context-agent-plugin-gemini-hooks/: GENERATED.md  README.md  gemini-extension.json
plugins/memo-stack-agent-plugin/: README.md  gemini-extension.json  opencode.json
plugins/memo-stack-agent-plugin-gemini-hooks/: gemini-extension.json
plugins/memory-agent-plugin/: .mcp.json  GENERATED.md  README.md  gemini-extension.json  opencode.json
plugins/memory-agent-plugin-cursor-workspace/: README.md
scripts/: __init__.py  agent_install_verification.py  agent_transcript_corpus_audit.py  agent_transcript_corpus_redactor.py  clean_full_smoke.py  clean_full_smoke_diagnostics.py  clean_full_smoke_load.py  clean_full_smoke_redaction.py  clean_full_smoke_reporting.py  frontend_marionette_local_e2e.py  install.sh  install_memory_agent_plugin.py  local_experience_proof.py  local_mcp_visual_memory_smoke.py  locomo_context_trace.py  locomo_failure_analysis.py  memora_direct_mcp_smoke.py  memory_scope_snapshot_thread_smoke.py  multimodal_docker_live_proof.py  multimodal_live_provider_canary.py  multimodal_production_goal_audit.py  obsidian_connector_live_smoke.py  obsidian_mcp_smoke.py  official_public_benchmark_canary.py  plugin-kit-ai-local  quality_evidence_bundle.py  selfhost_smoke.py
tests/architecture/: test_file_size_boundaries.py  test_memory_boundaries.py
tests/e2e/: infinity_context_server_harness.py  memo_stack_server_harness.py  memory_server_harness.py  resource_guards.py  test_anchor_lifecycle_sdk_e2e.py  test_asset_extractions_e2e.py  test_context_link_batch_review_sdk_e2e.py  test_context_link_mcp_e2e.py  test_context_link_review_override_e2e.py  test_docling_asset_extraction_api_e2e.py  test_docling_extraction_real_e2e.py  test_image_asset_extraction_e2e.py  test_infinity_context_agent_behavior_bench_e2e.py  test_infinity_context_agent_plugin_e2e.py  test_infinity_context_mcp_e2e.py  test_manual_context_link_sdk_e2e.py  test_memo_stack_agent_behavior_bench_e2e.py  test_memo_stack_agent_plugin_e2e.py  test_memo_stack_mcp_e2e.py  test_memory_agent_behavior_bench_e2e.py  test_memory_agent_plugin_e2e.py  test_memory_browser_operations_sdk_e2e.py  test_memory_digest_e2e.py  test_memory_mcp_e2e.py  test_memory_quality_e2e.py  test_memory_scale_chaos_load_e2e.py  test_multimodal_ingestion_edge_cases_e2e.py  test_multimodal_production_acceptance_e2e.py  test_obsidian_cli_e2e.py  test_semantic_linking_quality_e2e.py
tests/snapshots/: prompt_contract.json
tests/unit/: mcp_adapter_fakes.py  test_admin_invariants.py  test_admin_storage_cleanup.py  test_admin_tokens.py  test_agent_behavior_bench.py  test_agent_install_verification.py  test_agent_transcript_corpus_audit.py  test_agent_transcript_corpus_redactor.py  test_anchor_domain.py  test_anchor_event_merge_policy.py  test_anchor_extraction.py  test_anchor_lifecycle_api.py  test_anchor_relation_projection.py  test_anchor_temporal_window.py  test_api_errors.py  test_api_public_payload.py  test_asset_context_link_domain.py  test_asset_context_links_api.py  test_asset_extraction_artifact_cleanup.py  test_asset_extraction_domain.py  test_asset_extraction_lifecycle_races.py  test_asset_extraction_media_contracts.py  (+226 more)
(+145 files in other folders)
