[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-platform"
version = "0.1.0"
description = "Reusable memory platform core lite"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.18.4,<2.0.0",
  "asyncpg>=0.31.0,<1.0.0",
  "fastapi>=0.136.3,<1.0.0",
  "greenlet>=3.5.1,<4.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.14.1,<3.0.0",
  "sqlalchemy>=2.0.50,<3.0.0",
  "uvicorn>=0.48.0,<1.0.0",
]

[project.optional-dependencies]
qdrant = [
  "qdrant-client>=1.18.0,<2.0.0",
]
openai = [
  "openai>=2.38.0,<3.0.0",
]
graphiti = [
  "graphiti-core>=0.29.1,<1.0.0",
]
dev = [
  "aiosqlite>=0.22.1,<1.0.0",
  "pytest>=9.0.3,<10.0.0",
  "ruff>=0.15.14,<1.0.0",
]

[tool.setuptools.packages.find]
where = [
  "packages/memory_core",
  "packages/memory_server",
  "packages/memory_adapters",
  "packages/memory_sdk",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/memory_core",
  "packages/memory_server",
  "packages/memory_adapters",
  "packages/memory_sdk",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
