[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memo-stack"
version = "0.1.0"
description = "Reusable memo stack core lite"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.18.4,<2.0.0",
  "asyncpg>=0.31.0,<1.0.0",
  "fastapi>=0.136.3,<1.0.0",
  "greenlet>=3.5.1,<4.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.14.1,<3.0.0",
  "sqlalchemy>=2.0.50,<3.0.0",
  "uvicorn>=0.48.0,<1.0.0",
]

[project.optional-dependencies]
qdrant = [
  "qdrant-client>=1.18.0,<2.0.0",
]
openai = [
  "openai>=2.38.0,<3.0.0",
]
graphiti = [
  "graphiti-core>=0.29.1,<1.0.0",
]
cognee = [
  "cognee>=1.1.2,<2.0.0",
]
mcp = [
  "mcp>=1.27.1,<2.0.0",
]
dev = [
  "aiosqlite>=0.22.1,<1.0.0",
  "mcp>=1.27.1,<2.0.0",
  "pytest>=9.0.3,<10.0.0",
  "ruff>=0.15.14,<1.0.0",
]

[project.scripts]
memo-stack = "memo_stack_cli.cli:main"
memo-stack-mcp = "memo_stack_mcp.server:main"
memo-stack-mcp-bench = "memo_stack_mcp.bench:main"
memo-stack-mcp-agent-bench = "memo_stack_mcp.agent_behavior_bench:main"

[tool.setuptools.packages.find]
where = [
  "packages/memo_stack_core",
  "packages/memo_stack_server",
  "packages/memo_stack_adapters",
  "packages/memo_stack_sdk",
  "packages/memo_stack_mcp",
  "packages/memo_stack_cli",
]

[tool.setuptools.package-data]
memo_stack_adapters = [
  "extraction/prompts/*.md",
  "extraction/schemas/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/memo_stack_core",
  "packages/memo_stack_server",
  "packages/memo_stack_adapters",
  "packages/memo_stack_sdk",
  "packages/memo_stack_mcp",
  "packages/memo_stack_cli",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
