[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinity-context"
version = "0.1.0"
description = "Reusable infinity context core lite"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.18.4,<2.0.0",
  "asyncpg>=0.31.0,<1.0.0",
  "fastapi>=0.136.3,<1.0.0",
  "greenlet>=3.5.1,<4.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pillow>=12.2.0,<13.0.0",
  "pydantic-settings>=2.14.1,<3.0.0",
  "pypdf>=6.13.2,<7.0.0",
  "sqlalchemy>=2.0.50,<3.0.0",
  "uvicorn>=0.48.0,<1.0.0",
]

[project.optional-dependencies]
qdrant = [
  "qdrant-client>=1.18.0,<2.0.0",
]
openai = [
  "openai>=2.41.1,<3.0.0",
]
graphiti = [
  "graphiti-core>=0.29.1,<1.0.0",
]
docling = [
  "docling>=2.102.1,<3.0.0",
]
asr = [
  "faster-whisper>=1.2.1,<2.0.0",
]
s3 = [
  "boto3>=1.43.32,<2.0.0",
]
cognee = [
  "cognee>=1.1.2,<2.0.0",
]
mcp = [
  "mcp>=1.27.1,<2.0.0",
]
dev = [
  "aiosqlite>=0.22.1,<1.0.0",
  "mcp>=1.27.1,<2.0.0",
  "pytest>=9.0.3,<10.0.0",
  "ruff>=0.15.14,<1.0.0",
]

[project.scripts]
infinity-context = "infinity_context_cli.cli:main"
infinity-context-mcp = "infinity_context_mcp.server:main"
infinity-context-mcp-bench = "infinity_context_mcp.bench:main"
infinity-context-mcp-agent-bench = "infinity_context_mcp.agent_behavior_bench:main"
infinity-context-obsidian = "infinity_context_obsidian.cli:main"

[tool.setuptools.packages.find]
where = [
  "packages/infinity_context_core",
  "packages/infinity_context_server",
  "packages/infinity_context_adapters",
  "packages/infinity_context_sdk",
  "packages/infinity_context_mcp",
  "packages/infinity_context_cli",
  "packages/infinity_context_obsidian",
]

[tool.setuptools.package-data]
infinity_context_adapters = [
  "extraction/prompts/*.md",
  "extraction/schemas/*.json",
  "postgres/migrations/*.sql",
]
infinity_context_server = [
  "web/*.html",
  "web/assets/*.css",
  "web/assets/*.js",
]
infinity_context_obsidian = [
  "plugin_bundle/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  ".",
  "packages/infinity_context_core",
  "packages/infinity_context_server",
  "packages/infinity_context_adapters",
  "packages/infinity_context_sdk",
  "packages/infinity_context_mcp",
  "packages/infinity_context_cli",
  "packages/infinity_context_obsidian",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
